# rpath_meson

./: .gitignore  meson.build  meson.options  test.sh
src/: meson.build
src/meson_test/: __init__.py  _meson_test.pyx  meson.build
subprojects/: .gitignore  gmp-6.2.1.wrap  gmp-6.3.0.wrap  gmp-hg.wrap  mpfr-4.2.1.wrap  mpfr-git.wrap
subprojects/packagefiles/gmp-release/: meson.build
subprojects/packagefiles/mpfr-git/: meson.build
subprojects/packagefiles/mpfr-release/: meson.build
